[package]
name = "image-processing"
version = "0.1.0"
authors = ["Agnieszka Jonak <agnieszka.jonak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "methods"
path = "src/methods.rs"

[dependencies]
raster = "0.2.0"
